<resources>
    <string name="app_name">咩咩睡眠</string>

    <string name="main_index">音你而来</string>
    <string name="main_sleep">睡眠SPA</string>
    <string name="main_miemie">咩咩</string>
    <string name="vip_center">会员中心</string>
    <string name="find_center">发现中心</string>
    <string name="person_favor">个人收藏</string>
    <string name="alarm_setting">闹钟设置</string>
    <string name="individuality_skin">个性皮肤</string>
    <string name="opinion_feedback">意见反馈</string>
    <string name="system_setting">系统设置</string>
    <string name="preside_setting">主播介绍</string>
    <string name="vip_protocol">会员协议</string>
    <string name="vip_right">会员权益</string>
    <string name="vip_type">会员种类</string>
    <string name="quality_music">高品质乐曲</string>
    <string name="content_know">内容早知道</string>
    <string name="charge">充 值</string>
    <string name="vip_miemie">咩咩会员</string>
    <string name="cancel">取消</string>
    <string name="confirm">确 定</string>
    <string name="open_plan">定时开启模式</string>
    <string name="open_2g">打开2G/3G/4G下载音频</string>
    <string name="clear_cache">清理缓存</string>
    <string name="logout">退出登录</string>
    <string name="from_album">从相册选择</string>
    <string name="take_photo">拍照</string>
    <string name="opened">已开通</string>
    <string name="not_opened">未开通</string>
    <string name="soon_open">快来开通会员吧!</string>
    <string name="expired_time">%1$s到期</string>
    <string name="tint">提示</string>
    <string name="no_data">暂无数据</string>
    <string name="retry">重试</string>
    <string name="register">注册</string>
    <string name="change_password">修改密码</string>
    <string name="account_safe">账户与安全</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="today">今天</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_success_confirm">确 认</string>

    <string-array name="items">
        <item>10分钟后关闭</item>
        <item>20分钟后关闭</item>
        <item>30分钟后关闭</item>
        <item>深度睡眠后关闭</item>
        <item>关闭闹钟</item>

    </string-array>


</resources>
