<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/alarm_bg"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tint"
        android:textColor="@color/black"
        android:textSize="@dimen/text_16" />

    <TextView
        android:id="@+id/tv_tint_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:textColor="@color/black"
        tools:text="是否退出咩咩睡眠" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/gray_cccccc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/text_14" />


        <View
            android:layout_width="@dimen/dp_05"
            android:layout_height="@dimen/dp_40"
            android:background="@color/gray_cccccc" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/dp_5"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_14" />

    </LinearLayout>


</LinearLayout>