<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/setting_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="60dp"
            android:layout_height="60dp" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_toRightOf="@id/iv_avatar">

            <LinearLayout
                android:id="@+id/ll_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Angelababy"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_16" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10">

                    <Button
                        android:id="@+id/btn_vip"
                        android:layout_width="60dp"
                        android:layout_height="@dimen/dp_25"
                        android:background="@drawable/vip_state_bg"
                        android:gravity="center"
                        android:paddingBottom="@dimen/dp_2"
                        android:paddingTop="@dimen/dp_2"
                        android:text="已开通"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_12" />

                    <TextView
                        android:id="@+id/tv_expired_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:text="2016-02-12到期"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_12" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="登录/注册"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16"
                android:visibility="gone" />

        </FrameLayout>

    </RelativeLayout>


    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_vip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_30"
        app:icon="@mipmap/vip_center"
        app:title="@string/vip_center" />


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />


    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:icon="@mipmap/find_center"
        app:title="@string/find_center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />


    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:icon="@mipmap/person_favor"
        app:title="@string/person_favor" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />

    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:icon="@mipmap/alarm_setting"
        app:title="@string/alarm_setting" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />

    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_skin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:visibility="gone"
        app:icon="@mipmap/individuality_skin"
        app:title="@string/individuality_skin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />

    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:icon="@mipmap/opinion_feedback"
        app:title="@string/opinion_feedback" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />

    <com.yc.sleepmm.setting.widget.BaseSettingView
        android:id="@+id/baseSettingView_system"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        app:icon="@mipmap/system_setting"
        app:title="@string/system_setting" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_05"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_5"
        android:background="#767193" />


</LinearLayout>