<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_1b275d"
        android:orientation="vertical">


        <include layout="@layout/common_top_view" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@mipmap/pay_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_15">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_right"
                            android:textColor="@color/blue_08a8ea"
                            android:textSize="@dimen/text_16" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20"
                            android:weightSum="3">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/vip_skin" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_15"
                                    android:text="@string/individuality_skin"
                                    android:textColor="@color/gray_6d76a0"
                                    android:textSize="@dimen/text_14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/dp_5"
                                    android:layout_marginTop="@dimen/dp_15"
                                    android:gravity="center"
                                    android:lineSpacingExtra="@dimen/dp_5"
                                    android:text="开启咩咩炫酷个性皮肤"
                                    android:textColor="@color/gray_485185" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/vip_music" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"

                                    android:layout_marginTop="@dimen/dp_15"
                                    android:text="@string/quality_music"
                                    android:textColor="#6D76A0"
                                    android:textSize="@dimen/text_14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/dp_8"
                                    android:layout_marginTop="@dimen/dp_15"
                                    android:gravity="center"
                                    android:lineSpacingExtra="@dimen/dp_5"
                                    android:text="vip专属电台，音乐"
                                    android:textColor="@color/gray_485185" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:orientation="vertical">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@mipmap/vip_content" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/dp_15"
                                    android:text="@string/content_know"
                                    android:textColor="#6D76A0"
                                    android:textSize="@dimen/text_14" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="@dimen/dp_8"
                                    android:layout_marginTop="@dimen/dp_15"
                                    android:gravity="center"
                                    android:lineSpacingExtra="@dimen/dp_5"
                                    android:text="定时推送最新的文章语录"
                                    android:textColor="@color/gray_485185" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_05"
                        android:layout_marginTop="@dimen/dp_15"
                        android:background="#767193" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/dp_15">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vip_type"
                            android:textColor="@color/blue_08a8ea"
                            android:textSize="@dimen/text_16" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerView_good"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/recyclerView_pay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_20" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <Button
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/pay_btn_ripper"
                android:text="@string/charge"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16" />
        </RelativeLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>