<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/common_top_view" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_f0f0f0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="@dimen/dp_3"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/open_plan"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <Switch
                        android:id="@+id/switch_timing"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:switchMinWidth="10dp"
                        android:thumb="@drawable/thumb_selector"
                        android:track="@drawable/switch_selector_bg" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="22:00-05:00（次日）" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:elevation="@dimen/dp_3"
                android:orientation="vertical"
                android:padding="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/open_2g"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_16" />

                    <Switch
                        android:id="@+id/switch_open2g"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:checked="true"
                        android:switchMinWidth="10dp"
                        android:thumb="@drawable/thumb_selector"
                        android:track="@drawable/switch_selector_bg" />


                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="如果流量充足建议打开" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:elevation="@dimen/dp_5"
                android:paddingBottom="@dimen/dp_15"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:paddingTop="@dimen/dp_15">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/clear_cache"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16" />

                <ImageView
                    android:id="@+id/iv_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/gray_right_arrow" />

                <TextView
                    android:id="@+id/tv_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dp_10"
                    android:layout_toLeftOf="@id/iv_arrow"
                    android:text="315kB"
                    android:textSize="@dimen/text_16" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/logout_btn_ripper"
            android:gravity="center"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="@dimen/text_16" />

    </RelativeLayout>


</LinearLayout>